Fixed nav z-index bug

--- a/public/styles/main.sass
+++ b/public/styles/main.sass
@@ -35,10 +35,12 @@ nav
         left: 0px
         right: 0px
         background-color: rgba($back-dark, 0.5)
+        z-index: 20
 
     #hamburger-menu-body
         width: 352px
         position: absolute
+        z-index: 21
         top: 80px
         bottom: 0px
         right: 0px
